--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf dist && babel src -d dist"
+    "build": "rimraf dist && babel --out-dir dist src"
   },
   "repository": {
     "type": "git",
@@ -28,7 +28,10 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
+    "fs.extra": "^1.3.2",
     "mkdirp": "^0.5.1",
+    "ncp": "^2.0.0",
+    "path": "^0.12.7",
     "rimraf": "^2.5.4"
   },
   "devDependencies": {
